<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tv_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/list_item_padding"
        android:text="@string/sample_date"
        android:textSize="@dimen/list_item_size" />

    <TextView
        android:id="@+id/tv_list_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/list_item_padding"
        android:text="@string/sample_kind"
        android:textSize="@dimen/list_item_size" />

    <TextView
        android:id="@+id/tv_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_list_date"
        android:padding="@dimen/list_title_padding"
        android:text="@string/sample_title"
        android:textSize="@dimen/list_title_size" />

    <TextView
        android:id="@+id/tv_list_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_list_title"
        android:padding="@dimen/list_item_padding"
        android:text="@string/sample_author"
        android:textSize="@dimen/list_item_size" />

</RelativeLayout>
