<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.vshukla.thed.activities.ReaderActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/list_title_padding"
        android:paddingStart="@dimen/list_title_padding"
        android:paddingRight="@dimen/list_item_padding"
        android:paddingEnd="@dimen/list_item_padding"
        android:paddingTop="@dimen/list_title_padding"
        android:paddingBottom="@dimen/list_item_padding"
        android:layout_toLeftOf="@+id/tv_date"
        android:layout_toStartOf="@+id/tv_date"
        android:text="@string/sample_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_title"
        android:paddingLeft="@dimen/list_title_padding"
        android:paddingStart="@dimen/list_title_padding"
        android:paddingRight="@dimen/list_item_padding"
        android:paddingEnd="@dimen/list_title_padding"
        android:paddingTop="@dimen/list_item_padding"
        android:paddingBottom="@dimen/list_title_padding"
        android:text="@string/sample_author"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/tv_title"
        android:paddingRight="@dimen/list_title_padding"
        android:paddingEnd="@dimen/list_title_padding"
        android:paddingTop="@dimen/list_title_padding"
        android:paddingBottom="@dimen/list_item_padding"
        android:paddingLeft="@dimen/list_item_padding"
        android:paddingStart="@dimen/list_item_padding"
        android:text="@string/sample_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_title"
        android:paddingRight="@dimen/list_title_padding"
        android:paddingEnd="@dimen/list_title_padding"
        android:paddingLeft="@dimen/list_item_padding"
        android:paddingStart="@dimen/list_item_padding"
        android:paddingTop="@dimen/list_item_padding"
        android:paddingBottom="@dimen/list_title_padding"
        android:text="@string/sample_kind"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ScrollView
        android:id="@+id/sv_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_kind"
        android:paddingStart="@dimen/reader_padding_start"
        android:paddingLeft="@dimen/reader_padding_start"
        android:paddingRight="@dimen/reader_padding_end"
        android:paddingEnd="@dimen/reader_padding_end"
        android:layout_centerHorizontal="true"
        android:scrollbarStyle="insideInset" >

        <LinearLayout
            android:id="@+id/ll_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_body"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="1dp"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
